# endstone-chatrelay

./: .gitignore  README.md  pyproject.toml
src/endstone_chatrelay/: __init__.py  chatrelay.py
